# skyrim-auto-parallax

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
include/: PCH.h
package/SKSE/Plugins/: AutoParallax.ini
src/: D3D11.cpp  FormUtil.cpp  XSEPlugin.cpp
